kubia-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia-clusterip
spec:
  ports:
  - port: 80  
    targetPort: 8080
    protocol: TCP
  selector: 
    app: kubia
