kubia-lb.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80  
    targetPort: 8080
    protocol: TCP
  selector: 
    app: kubia
