kubia-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports: 
    - port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 31570
  selector:
    app: kubia
